# ayweb

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  vcpkg-configuration.json
.github/workflows/: macos.yml  release.yml  ubuntu.yml  windows.yml
cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Vcpkg.cmake
examples/: CMakeLists.txt
examples/src/: echo.cpp
include/Ayweb/: ayweb.hpp  http_server.hpp  protocol.hpp
include/ayweb/: connection.hpp  context.hpp  export.hpp  http_server.hpp  protocol.hpp  router.hpp
include/ayweb/util/: func.hpp
src/: connection.cpp  http_server.cpp  protocol.cpp  router.cpp
test/: CMakeLists.txt
test/src/: .clang-tidy  test.cpp  tmp_test.cpp
